style: fix song item overflow and alignment on small screens

--- a/style.css
+++ b/style.css
@@ -737,7 +737,7 @@
       }
 
       .list .song {
-          height: 5rem;
+          height: 7rem;
           flex-direction: column;
           justify-content: space-around;
           align-items: center;
